# Setradar

./: .env  .gitignore  CNAME  README.md  manifest.json  pyproject.toml  sw.js
.claude/: settings.json  settings.local.json
.github/workflows/: deploy-pages.yml  ra-scraper.yml
backend/: push_sender.py
backend/config/: venues.json
backend/database/: add_event_interested_count.sql  add_soundcloud_url.sql  create_schema_from_json.py  lineup_init.sql  lineup_seed_example.json  phase1_frontend_support.sql  push_notifications_migration.sql  seed_event_hype.py  supabase_all_tables_dump.json  supabase_example.py  supabase_seed_lineup.py
backend/fetcher/: drive_to_db.py  lineup_seed_example.json  ra_client.py  ra_scraper.py  transform.py  venues_config.py
frontend/: CNAME  index.html  manifest.json  profile.html  sitex.html  sw.js
frontend/components/: footer.html  navbar.html
frontend/css/: styles.css
frontend/js/: auth-nav.js  components.js  config.js  cookies.js  event-cards.js  help.js  home.js  i18n.js  legal.js  past-event-modal.js  profile.js
frontend/sitex/: editions.json
frontend/sitex/001/: canvas.html  meta.json
frontend/sitex/_template/: README.md  canvas.html  meta.json
raspberry/: config.yaml  debug_vision.py  local_to_db.py  main.py  phone_sleep.sh  phone_wake.sh  post_process.py  test_drive_upload.py  test_main.py  test_ocr.py  test_stories.py
raspberry/bot/: human.py  stories.py  test_screenshot.py  uploader.py  vision.py
setradar.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
